log
Wed 22 Mar 2023 02:45:49 PM UTC: 
 tests:  0|6
total_score: 0/70
fe946ad
Thu 23 Mar 2023 01:37:14 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:44: error: expected ‘)’ before ‘;’ token
   32 |   List* lista = (List*) malloc(sizeof(List);
      |                               ~            ^
      |                                            )
list.c:38:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   38 | }
      | ^
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
In file included from test.c:5:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List* lista = (List*) malloc(sizeof(List);
      |         ^~~~~
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:81:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   81 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:72:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   72 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:59:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   59 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ef9d55f
Thu 23 Mar 2023 01:38:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
be18cae
Thu 23 Mar 2023 01:56:22 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 15/70
901d958
Thu 23 Mar 2023 02:04:01 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
dc28375
Thu 23 Mar 2023 02:12:16 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
063d5da
Thu 23 Mar 2023 02:15:21 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
4494d13
